Refactor input handling in MusicInfoChatbot and implement voice recognition and text-to-speech modules

--- a/image_classification.ipynb
+++ b/image_classification.ipynb
@@ -484,60 +484,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_custom_cnn_model(input_shape=(224, 224, 3), num_classes=NUM_CLASSES):\n",
-    "    model = models.Sequential(\n",
-    "        [\n",
-    "            layers.Conv2D(32, (3, 3), activation=\"relu\", input_shape=input_shape),\n",
-    "            layers.BatchNormalization(),\n",
-    "            layers.MaxPooling2D((2, 2)),\n",
-    "            layers.Conv2D(64, (3, 3), activation=\"relu\"),\n",
-    "            layers.BatchNormalization(),\n",
-    "            layers.MaxPooling2D((2, 2)),\n",
-    "            layers.Conv2D(128, (3, 3), activation=\"relu\"),\n",
-    "            layers.BatchNormalization(),\n",
-    "            layers.MaxPooling2D((2, 2)),\n",
-    "            layers.Conv2D(256, (3, 3), activation=\"relu\"),\n",
-    "            layers.BatchNormalization(),\n",
-    "            layers.MaxPooling2D((2, 2)),\n",
-    "            layers.Flatten(),\n",
-    "            layers.Dropout(0.5),\n",
-    "            layers.Dense(512, activation=\"relu\"),\n",
-    "            layers.BatchNormalization(),\n",
-    "            layers.Dropout(0.5),\n",
-    "            layers.Dense(num_classes, activation=\"softmax\"),\n",
-    "        ]\n",
-    "    )\n",
-    "\n",
-    "    return model\n",
-    "\n",
-    "\n",
-    "def create_transfer_learning_model(input_shape=(224, 224, 3), num_classes=NUM_CLASSES):\n",
-    "    base_model = MobileNetV2(\n",
-    "        input_shape=input_shape,\n",
-    "        include_top=False,\n",
-    "        weights=\"imagenet\",\n",
-    "    )\n",
-    "\n",
-    "    for layer in base_model.layers[:-4]:\n",
-    "        layer.trainable = False\n",
-    "    for layer in base_model.layers[-4:]:\n",
-    "        layer.trainable = True\n",
-    "\n",
-    "    model = models.Sequential(\n",
-    "        [\n",
-    "            base_model,\n",
-    "            layers.GlobalAveragePooling2D(),\n",
-    "            layers.Dropout(0.5),\n",
-    "            layers.Dense(256, activation=\"relu\"),\n",
-    "            layers.BatchNormalization(),\n",
-    "            layers.Dropout(0.5),\n",
-    "            layers.Dense(num_classes, activation=\"softmax\"),\n",
-    "        ]\n",
-    "    )\n",
-    "\n",
-    "    return model\n",
-    "\n",
-    "\n",
     "def create_resnet_model(input_shape=(224, 224, 3), num_classes=NUM_CLASSES):\n",
     "    base_model = ResNet50(\n",
     "        input_shape=input_shape,\n",
@@ -663,76 +609,6 @@
     "\n",
     "\n",
     "callbacks.append(GPUMemoryCallback())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "print(\"Creating and training the model...\")\n",
-    "\n",
-    "custom_model = create_custom_cnn_model()\n",
-    "\n",
-    "custom_model.compile(\n",
-    "optimizer=\"adam\",\n",
-    "loss=\"sparse_categorical_crossentropy\",\n",
-    "metrics=[\"accuracy\"],\n",
-    ")\n",
-    "\n",
-    "print(\"\\nCustom CNN Model Summary:\")\n",
-    "custom_model.summary()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "print(\"\\nTraining Custom CNN Model...\")\n",
-    "custom_history = custom_model.fit(\n",
-    "train_generator,\n",
-    "epochs=EPOCHS,\n",
-    "validation_data=val_generator,\n",
-    "callbacks=callbacks,\n",
-    "class_weight=class_weight_dict,\n",
-    "verbose=1,\n",
-    ")\n",
-    "\n",
-    "custom_model.save(OUTPUT_DIR / \"custom_cnn_model.keras\")\n",
-    "print(\"\\nCustom CNN Model training complete!\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "transfer_model = create_transfer_learning_model()\n",
-    "\n",
-    "transfer_model.compile(\n",
-    "optimizer=tf.keras.optimizers.Adam(learning_rate=0.0001),\n",
-    "loss=\"sparse_categorical_crossentropy\",\n",
-    "metrics=[\"accuracy\"],\n",
-    ")\n",
-    "\n",
-    "print(\"\\nTransfer Learning Model Architecture:\")\n",
-    "transfer_model.summary()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "print(\"\\nTraining transfer learning model...\")\n",
-    "transfer_history = transfer_model.fit(\n",
-    "train_generator,\n",
-    "epochs=EPOCHS,\n",
-    "validation_data=val_generator,\n",
-    "callbacks=callbacks,\n",
-    "class_weight=class_weight_dict,\n",
-    "verbose=1,\n",
-    ")\n",
-    "\n",
-    "transfer_model.save(OUTPUT_DIR / \"transfer_learning_model.keras\")\n",
-    "print(\"\\nTransfer learning model training complete!\")\n"
    ]
   },
   {
@@ -901,9 +777,9 @@
    "source": [
     "def ensemble_predict(models, image_path, img_size=224):\n",
     "    img = tf.io.read_file(image_path)\n",
-    "    img = tf.image.decode_jpeg(img, channels=3)\n",
+    "    img = tf.image.decode_jpeg(img, channels=3)  # type: ignore\n",
     "    img = tf.image.resize(img, (img_size, img_size))\n",
-    "    img = img / 255.0\n",
+    "    img = img / 255.0  # type: ignore\n",
     "    img = tf.expand_dims(img, 0)\n",
     "\n",
     "    predictions = []\n",
